--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Express App</title>
-   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1> Home Page </h1>
-  <form action="/contact" method="GET">
+  <form action="/contact" method="POST">
   <div>
     <label for="name">Name</label>
     <input type="text" name="name" id="name">
